      X configuration option parser.  This is useful in conjunction with
      the "ConnectedMonitor" X configuration option, for emulating the
      presence of connected monitors without knowing what specific
      connectors are available.  See the "Display Device Names" appendix
      in the README for details.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.

 -- Andreas Beckmann <anbe@debian.org>  Mon, 29 Jun 2020 21:42:12 +0200

nvidia-graphics-drivers (440.82-2) unstable; urgency=medium

  * Fix #includes in conftest.sh to fix kernel module build for Linux 5.7,
    thanks to Jiri Palecek.  (Closes: #960735)
  * Switch to debhelper-compat (= 13).

 -- Andreas Beckmann <anbe@debian.org>  Wed, 20 May 2020 17:22:58 +0200

nvidia-graphics-drivers (440.82-1) unstable; urgency=medium

  * New upstream long lived branch release 440.82 (2020-04-07).
    - Added a workaround for Steam Play title DOOM Eternal, which overrides
      application requested memory locations, to ensure performance-critical
      resources be placed in video memory.
    - Allow presenting from queue families which only expose
      VK_QUEUE_COMPUTE_BIT when using XCB in addition to Xlib surfaces.
    - Fixed a bug that caused render-offloaded applications to crash on exit.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.
  * Update lintian overrides.

 -- Andreas Beckmann <anbe@debian.org>  Sat, 11 Apr 2020 14:29:59 +0200

nvidia-graphics-drivers (440.64-2) unstable; urgency=medium

  * Prepare infrastructure for packaging Tesla 440 driver releases (available
    for amd64 (including some i386 libs) and ppc64el).
  * nvidia-detect: Add support for Tesla 440 drivers.
  * Bump glx-alternative-nvidia dependency for ppc64el support.
  * Drop versioned constraints that are satisfied in stretch.
  * bug-control: Report information about more (virtual) packages.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 18 Mar 2020 21:01:28 +0100

nvidia-graphics-drivers (440.64-1) unstable; urgency=medium
